// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollToSection should not scroll to section 1`] = `
<DocumentFragment>
  <span>
    It should not be wrapped by div tag
  </span>
</DocumentFragment>
`;

exports[`ScrollToSection should scroll to section 1`] = `
<DocumentFragment>
  <div>
    <span>
      It should be wrapped by div tag
    </span>
  </div>
</DocumentFragment>
`;
